--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-     "predeploy": "yarn build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   },
-
   "dependencies": {
     "@formatjs/intl-pluralrules": "5.2.14",
     "@formatjs/intl-relativetimeformat": "11.2.14",
@@ -27,6 +26,7 @@
     "formik": "2.4.6",
     "line-awesome": "1.3.0",
     "nouislider": "15.8.1",
+    "preview": "^0.1.3",
     "prism-react-renderer": "2.3.1",
     "prism-themes": "1.9.0",
     "prismjs": "1.29.0",
