--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-inlinesvg": "4.1.3",
     "react-intl": "^6.6.8",
     "react-query": "3.39.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "6.25.1",
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
